# colcon-test-result

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
colcon_test_result/test_result/: __init__.py  xunit.py
colcon_test_result/verb/: test_result.py
test/: spell_check.words  test_flake8.py  test_spell_check.py
