[metadata]
name = colcon-test-result
version = attr: colcon_test_result.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-test-result/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-test-result/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to provide information about the test results.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:pkg_resources is deprecated as an API::flake8_import_order
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-test-result

[options.entry_points]
colcon_core.extension_point =
    colcon_test_result.test_result = colcon_test_result.test_result:TestResultExtensionPoint
colcon_core.verb =
    test-result = colcon_test_result.verb.test_result:TestResultVerb
colcon_test_result.test_result =
    xunit = colcon_test_result.test_result.xunit:XunitTestResult

[flake8]
import-order-style = google

[coverage:run]
source = colcon_test_result
